official changelog for ephFrame
------------------------------------------------------------------------------

2009-09-03
+	Model COnditions like this array('User.id' => array('1','2','5')) will
	create a IN (1,2,5) query (no properly quoting yet!)
+	Added Email Component from ephFrame 0.1 refactored
+	Email Component logs emails to log directory if $delivery is set to
 	'debug' for testing
+	Email can send UTF8 subjects now including german umlauts! (tested on
	OSX Mail and Webmail mobileme.com and iPhone)
+	Email Component attach files that are not there:
	->attach($filename, $content)

2009-08-29
+	added up and low as alias for upper and lower in String helper

2009-08-21
+	moves isEmpty to core.php file so that the method is available everywhere
	also changed logic to it returns the first argument passed that is not
	empty() and renamed it to coalesce (removed old coalesce method)
+	added whitelist filter to Hash class that removes all keys that are not
	in the whitelist of keys
+	added uri and url method to router class
+	added default HitCount Behavior to Behaviors that can increase single
	model fields when used (very usefull for increasing view + 1 f.e.)
+	added Time::nice and niceShort method to replace timeAgoInWords soon
+	styles of simpletest changed a bit

2009-08-13
+	added Text Helper that replaces URLs and Emails in Text automatically with 
 	links
+	added Security Component that limits actions to specific HTTP Methods
+	dramatically decreased memory and compile time usage in model class that
	makes everything up to 50% faster

2009-08-12
+	fixed missing created update field when inserting new model entries with
	multiple behaviors
+	added theming, which includes js/css search in theme directory
+	fixed js packer to append line-feed at end of packed js files
+	added after[Action] and before[Action] callbacks in the controller
+	added subversion keywords and new formatted copyright message on every
	file