@@ -13,6 +13,7 @@ Date		r/s		requests
 2009-02-05	53.91	3239
 2009-05-07	55.75	3345
 2009-07-07  21.71	1304 (apache2/PHP 5.2.9)
+2009-09-03  512		32787
 
 Single Tests:
 -------------
